# ds-repo

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: check_code.yaml  code-quality.yaml
{{cookiecutter.project_name}}/requirements/: test_requirements.txt
